--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.daw</groupId>
-    <artifactId>VorealProject</artifactId>
+    <artifactId>proLibrary</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>VorealProject</name>
+    <name>proLibrary</name>
 
 
     <properties>
